2014-04-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.h:
	Add libxml2 header required for gst-1.0 (was already included by
	GStreamer in 0.10).

2014-04-03  Xavi Artigas  <xartigas@fluendo.com>

	* win32/vs10/libgstfluttml_sdk.vcxproj:
	Add build dependency with libxml2 for gst-1.0

2014-04-03  Xavi Artigas  <xartigas@fluendo.com>

	* src/fluttml.c:
	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer),
	(gst_ttmlparse_change_state), (gst_ttmlparse_init):
	* src/gstttmlparse.h:
	Add support for building the plugin in DEMO mode.
	CAUTION: Since subtitle streams are SPARSE, the accumulated duration
	of all subtitles has no direct relationship with the total clip
	duration (in case the ttml is embedded in a container).

2014-04-01  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.10 ===

2014-01-28  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.9 ===

2014-01-24  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_time_expression),
	(gst_ttml_attribute_parse):
	Fix memory corruption caused by setlocale. The pointer it returns
	is not valid forever so its contents must be cached.
	This is undocumented and was causing problems detected on Windows XP
	by Dr. Memory.

2014-01-07  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.8 ===

2014-01-07  Andoni Morales  <amorales@fluendo.com>

	* src/gstttmlattribute.c:
	Fix potential segfault parsing font size attribute

2013-10-31  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.7 ===

2013-10-04  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c:
	- Do not expose text/plain as caps, as it is not true.

2013-08-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_time_expression):
	 - Parse time expressions that include a frame number as HH:MM:SS:FF
